--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -5,3 +5,11 @@ Add styles or override variables from the theme here.
 */
 
 $primary: #403F4C !default;
+
+$font-size-base: 1rem !default;
+$h1-font-size: $font-size-base * 2.5 !default;
+$h2-font-size: $font-size-base * 2 !default;
+$h3-font-size: $font-size-base * 1.5 !default;
+$h4-font-size: $font-size-base * 1.35 !default;
+$h5-font-size: $font-size-base * 1.15 !default;
+$h6-font-size: $font-size-base !default;
